# space-telemetry

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  VERSION  catalog-info.yaml  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml  signals.yaml  space-telemetry.example.yaml
.github/workflows/: build.yml  ci.yml  docker-publish.yml  docs.yml  observ-lib.yml
deploy/: prometheus.yml
deploy/grafana/dashboards/: sky.json
docs/: configuration.md  deployment.md  index.md
docs/collectors/: celestial-bodies.md  celestial_bodies.md  satellites.md  sky.md  solar-system-bodies.md  solar_system_bodies.md  space_weather.md  swpc.md
examples/: all-sky-offline.yaml  multi-observer.yaml  single-observer.yaml  space-weather.yaml  weather-satellites.yaml
operations/space-telemetry-alloy/: README.md  space-telemetry.alloy
operations/space-telemetry-observ-lib/: .env.example  .gitignore  README.md  config.libsonnet  jsonnetfile.json  main.libsonnet  mixin.libsonnet  push.py  render.py  satmap.libsonnet
operations/space-telemetry-observ-lib/alerts/: space-telemetry.yaml
operations/space-telemetry-observ-lib/dashboards/: space-telemetry-bodies.json  space-telemetry-satellites.json  space-telemetry-weather.json  space-telemetry.json
operations/space-telemetry-observ-lib/rules/: space-telemetry.yaml
scripts/: render_signals.py
space_telemetry/: __init__.py  __main__.py  app.py  cache.py  geometry.py  http_util.py  observer.py  otel.py  passes.py  server.py  settings.py
space_telemetry/collectors/: __init__.py
(+35 files in other folders)
