[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "space-telemetry"
version = "0.1.0"
description = "Prometheus/OTel exporter for space telemetry: solar-system bodies (ephemeris) and satellites (TLE/OMM)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "skyfield>=1.48",
    "prometheus-client>=0.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6",
]

[project.optional-dependencies]
otel = ["opentelemetry-sdk>=1.24", "opentelemetry-exporter-otlp>=1.24"]
dev = ["pytest>=8"]

[project.scripts]
space-telemetry = "space_telemetry.app:main"

[tool.setuptools.packages.find]
include = ["space_telemetry*"]
